--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
+  --base-font-size: 20px;
+  --max-width: 72rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,6 +22,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-size: var(--base-font-size);
 }
 
 body {
