--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,49 @@
 .main {
+  height: 100vh;
+  max-width: var(--max-width);
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 1fr 3rem;
+  padding: 1em;
 }
 
+.banner {
+  font-size: 1rem;
+  color: #999;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  overflow: scroll;
+  padding-bottom: 1rem;
+}
+
+.message {
+  padding: 0.5rem 0;
+  line-height: 1.5;
+}
+
+.role {
+  font-weight: bold;
+}
+
+.content {
+  font-weight: normal;
+}
+
+.userInput {
+  width: 100%;
+  height: 3rem;
+  padding: 1rem;
+  font-size: 1rem;
+  border: solid 1px gray;
+  border-radius: 0.5rem;
+}
